--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,137 +17,264 @@ body {
   color: $font-color;
   font-family: $font-family-main;
   font-weight: 300;
+  word-break: break-word;
+
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+
+  #root {
+    background-color: #fff;
+  }
 
   .header {
     display: block;
     width: 100%;
+    max-width: 1025px;
+    margin: 0 auto;
+    background-color: #fff;
+    text-align: left;
+
+    h1 {
+      flex-direction: column;
+      flex: 2 0 0;
+      padding: 26px;
+      margin: 0;
+      font-size: 50px;
+      font-weight: 300;
+    }
+
+  }
+
+  .mapContainer {
+    display: block;
+    background-color: #b4d7db;
+
+    .map {
+      position: relative;
+      width: 100%;
+      max-width: 1025px;
+      min-height: 520px;
+      margin: 0 auto;
+
+      .continent {
+        position: relative;
+        display: block;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: contain;
+        opacity: 0.8;
+        cursor: pointer;
+        text-align: center;
+        margin: 0 auto;
+        padding: 20px 0 0 0;
+
+        
+
+        &.AF {   
+          width: 120px;
+          height: 195px;
+          background-image: url(../assets/images/africa.svg);   
+        }
+
+        &.AN {
+          width: 275px;
+          height: 105px;
+          background-image: url(../assets/images/antarctica.svg);
+        }
+
+        &.AS {
+          width: 225px;
+          height: 250px;
+          background-image: url(../assets/images/asia.svg);
+        }
+
+        &.EU {
+          width: 205px;
+          height: 185px;
+          background-image: url(../assets/images/europe.svg);
+        }
+
+        &.OC {
+          width: 140px;
+          height: 185px;
+          background-image: url(../assets/images/oceania.svg);
+        }
+
+        &.NA {
+          width: 240px;
+          height: 320px;
+          background-image: url(../assets/images/north-a.svg);
+        }
+
+        &.SA {
+          width: 130px;
+          height: 235px;
+          background-image: url(../assets/images/south-a.svg);
+          background-size: 90px 140px;
+        }
+
+
+        &:hover {
+          opacity: 1;
+        }
+      }
+}
+  }
+
+  .countriesListContainer {
+    display: block;
+    width: 100%;
+    min-height: 297px;
     background-color: #fff;
 
-    span {
+    .countriesList {
       display: block;
+      position: relative;
       max-width: 1025px;
-      padding: 30px;
+      padding: 26px;
       margin: 0 auto;
-      font-size: 50px;
+      font-size: 14px;
+      -webkit-column-count: 1;
+      -moz-column-count: 1;
+      column-count: 1;                
+
+      .search {
+        display: block;
+        height: 30px;
+      }
+
+      ul {
+        list-style: none;
+        padding: 0;
+
+        li {
+          position: relative;   
+          cursor: pointer;
+          
+        }
+      }
+        .countryInfo {
+          position: relative;
+          display: block;
+          border-left: 4px solid #b3d7db;
+          padding: 0 10px;
+          margin: 15px 0;
+          font-size: 20px;
+          font-variant: small-caps;
+          -webkit-column-break-inside: avoid;
+          page-break-inside: avoid;     
+          break-inside: avoid-column;   
+
+          .info {
+            padding: 0 0 20px 0;
+            font-size: 16px;
+          }
+          .infoName {
+            font-weight: bold;
+            padding: 0 0 20px 0;
+          }
+          .infoEl {
+            list-style-type: circle;
+            margin-left: 23px;
+          }
+
+        }
     }
   }
 
-  .map {
+  .goToTop {
+    position: fixed;
     display: block;
-    position: relative;
-    max-width: 1025px;
-    height: 520px;
-    margin: 0 auto;
-    
-
-  .continent {
-    position: absolute;
-    cursor: pointer;
-
-    
-
-    &.AF {
-      top: 300px;
-      right: 200px;
-
-      .img {        
-        width: 125px;
-        height: 140px;
-        background-image: url(../assets/images/africa.svg);        
-      }
-    }
-
-    &.AN {
-      bottom: 0;
-      left: 170px;
-
-      .img {
-        width: 395px;
-        height: 47px;
-        background-image: url(../assets/images/antarctica.svg);
-      }
-
-      // .continentName {
-      //   position: absolute;
-      //   top: 0;
-      //   right: 0;
-      // }
-    }
-
-    &.AS {
-      top: 0;
-      right: 0;
-
-      .img {
-        width: 285px;
-        height: 220px;
-        background-image: url(../assets/images/asia.svg);
-      }
-    }
-
-    &.EU {
-      top: 20px;
-      right: 220px;
-
-      .img {
-        width: 205px;
-        height: 185px;
-        background-image: url(../assets/images/europe.svg);
-      }
-    }
-
-    
-
-    &.OC {
-      bottom: 100px;
-      right: 0;
-
-      .img {
-        width: 120px;
-        height: 95px;
-        background-image: url(../assets/images/oceania.svg);
-      }
-    }
-
-    &.NA {
-      top: 10px;
-      left: 0;
-
-      .img {
-        width: 290px;
-        height: 288px;
-        background-image: url(../assets/images/north-a.svg);
-      }
-    }
-
-    &.SA {
-      top: 295px;
-      left: 160px;
-
-      .img {
-        width: 90px;
-        height: 140px;
-        background-image: url(../assets/images/south-a.svg);
-      }
-    }
-
-    .img {
-      display: block;      
-      background-position: center center;
-      background-repeat: no-repeat;
-      background-size: contain;
-      opacity: 0.8;
-    }
-
-    &:hover .img{
-      opacity: 1;
-    }
+    right: 0;
+    bottom: 0;
+    width: 50px;
+    padding: 10px 0;
+    background-color: #b3d7db;
+    font-size: 12px;
+    color: #fff;
+    text-align: center;
+    line-height: 1;
   }
-  }
+  
 }
 
 
+@media screen and (min-width: 1025px) {
+  body {
+    .mapContainer {
+      .map {
+        .continent {
+          position: absolute; 
+          padding: 0;
+          text-align: left;
 
+          &.AF {
+            top: 250px;
+            right: 350px;         
+            width: 195px;
+            height: 140px;   
+          }
+
+          &.AN {
+            bottom: 0;
+            left: 330px;
+            width: 395px;
+            height: 47px;
+          }
+
+          &.AS {
+            top: 60px;
+            right: 140px;
+            width: 285px;
+            height: 220px;
+            text-align: right;
+          }
+
+          &.EU {
+            top: 44px;
+            right: 353px;
+            text-align: center;
+          }
+
+          &.OC {
+            bottom: 100px;
+            right: 160px;
+            width: 180px;
+            height: 95px;
+            text-align: right;
+          }
+
+          &.NA {
+            top: 30px;
+            left: 100px;
+            width: 290px;
+            height: 288px;
+          }
+
+          &.SA {
+            top: 305px;
+            left: 270px;
+            width: 110px;
+            height: 185px;
+          }
+        }
+      }
+    }
+    .countriesListContainer {
+      .countriesList {
+        -webkit-column-count: 3;
+        -moz-column-count: 3;
+        column-count: 3;     
+      }
+    }
+
+    .goToTop {
+      display: none;
+    }
+} 
+}
 
 
 
